add banner section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
                 <img src="./assets/hamburger-menu.png" alt="">
             </div>
         </nav>
+
+        <section id="banner">
+            <div class="banner-contant">
+                <div class="banner-image">
+                    
+                    <div class="cercle">
+                        <img src="./assets/hero-circle.png" alt="">
+                        <span class="badge">New</span>
+                    </div>
+                    <div class="mic">
+                        <img src="./assets/microphone.png" alt="">
+                        
+                    </div>
+
+                </div>
+
+                <div class="banner-text">
+                    <div class="text">
+                        <h2>TechWave</h2>
+                        <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                        <div class="banner-btn">
+                            <button class="btn"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
+                            <button class="white"><i class="fa-regular fa-envelope"></i> Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </header>
 </body>
 
