--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav>
+        <!-- <nav>
             <h2 class="logo-name">Tech<span>Wave</span></h2>
             <ul class="menu">
                 <li><a href="">Home</a></li>
@@ -28,19 +28,19 @@
             <div class="hamburger">
                 <img src="./assets/hamburger-menu.png" alt="">
             </div>
-        </nav>
+        </nav> -->
 
-        <section id="banner">
+        <section id="banner" hidden>
             <div class="banner-contant">
                 <div class="banner-image">
-                    
+
                     <div class="cercle">
                         <img src="./assets/hero-circle.png" alt="">
                         <span class="badge">New</span>
                     </div>
                     <div class="mic">
                         <img src="./assets/microphone.png" alt="">
-                        
+
                     </div>
 
                 </div>
@@ -57,6 +57,40 @@
                 </div>
             </div>
 
+        </section>
+
+        <section id="about">
+            <div class="about-container">
+                <div class="about-contant">
+                    <h2>About the Podcast</h2>
+                    <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                        We break down complex topics into digestible insights, explore productivity strategies that
+                        actually work,
+                        and share stories of personal growth from industry leaders.
+                    </p>
+                    <p class="bottom">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                </div>
+                <hr>
+
+                <div class="about-info">
+                    <div class="about-card">
+                        <h2>150K+</h2>
+                        <p>Monthly Listeners</p>
+                    </div>
+                    <div class="about-card">
+                        <h2>200+</h2>
+                        <p>Episodes Published</p>
+                    </div>
+                    <div class="about-card">
+                        <h2>4.9★</h2>
+                        <p>Average Rating</p>
+                    </div>
+                    <div class="about-card">
+                        <h2>50+</h2>
+                        <p>Industry Experts</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </header>
 </body>
