--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         </section>
 
-        <section id="about">
+        <section id="about" hidden>
             <div class="about-container">
                 <div class="about-contant">
                     <h2>About the Podcast</h2>
@@ -68,7 +68,8 @@
                         actually work,
                         and share stories of personal growth from industry leaders.
                     </p>
-                    <p class="bottom">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                    <p class="bottom">Join thousands of young professionals and tech enthusiasts who start their day
+                        with TechWave.</p>
                 </div>
                 <hr>
 
@@ -93,6 +94,49 @@
             </div>
         </section>
     </header>
+
+    <main>
+        <section id="why">
+            <div class="why-container">
+                <div class="heading">
+                    <h2>Why Choose TechWave</h2>
+                </div>
+
+                <div class="why-card-container">
+                    <div class="why-card card-1">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.</p>
+                    </div>
+                    <div class="why-card card-2">
+                        <img src="./assets/device.png" alt="">
+                        <h3>Mobile Friendly</h3>
+                        <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                    </div>
+                    <div class="why-card card-3">
+                        <img src="./assets/location.png" alt="">
+                        <h3>Global Community</h3>
+                        <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                    </div>
+                    <div class="why-card card-4">
+                        <img src="./assets/zap-fast.png" alt="">
+                        <h3>Exclusive Interviews</h3>
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                            secures exclusive conversations you won't find anywhere else, diving deep into their
+                            journeys, failures, and success strategies.</p>
+                    </div>
+                    <div class="why-card card-5">
+                        <img src="./assets/resource.png" alt="">
+                        <h3>Rich Resources</h3>
+                        <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
