make feature section and make it responsive

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </header>
 
     <main>
-        <section id="why">
+        <section id="why" hidden>
             <div class="why-container">
                 <div class="heading">
                     <h2>Why Choose TechWave</h2>
@@ -133,6 +133,61 @@
                         <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
                     </div>
 
+                </div>
+            </div>
+        </section>
+
+        <section id="feature">
+            <div class="feature-container">
+                <div class="episode" hidden>
+                    <h2 class="feature-heading">Featured Episodes</h2>
+                    <div class="video-content">
+                        <div class="video-1 video">
+                            <iframe width="380" height="315"
+                                src="https://www.youtube.com/embed/Dj62lL-SsBw?si=t_0ydVA2Wd_Urzum"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h2>হিদায়াতের উপর অবিচল থাকার উপায় | ISLAMZONE PODCAST</h2>
+                            <p>আজ তারুণ্যের চারপাশের পৃথিবী যেন বিরান মরু উপত্যকা। যেদিকে চোখ যায় শুধুই মরীচিকার
+                                হাতছানি। তার উপর অন্তহীন রুক্ষপ্রান্তর জুড়ে ছড়িয়ে রয়েছে বেশুমার অন্তর্ঘাতী চোরাবালি।
+                            </p>
+                            <div class="duration">
+                                <img src="./assets/clock.png" alt="">
+                                <h3>45 min</h3>
+                            </div>
+                        </div>
+                        <div class="video-2 video"><iframe width="380" height="315"
+                                src="https://www.youtube.com/embed/VZAMNxjRy6E?si=9BNGTuDzF-TaXzrc"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h2>Secrets to a Productive Life Loud & Clear Tuaha ibn Jalil, Ali E , Mugheerah Luqman & M
+                                Ali</h2>
+                            <p>The video emphasizes living a productive life by staying focused, disciplined, and
+                                purposeful. It highlights using time wisely and aligning daily actions with meaningful
+                                goals.
+                            </p>
+                            <div class="duration">
+                                <img src="./assets/clock.png" alt="">
+                                <h3>1 hr</h3>
+                            </div>
+                        </div>
+                        <div class="video-3 video">
+                           <iframe width="380" height="315" src="https://www.youtube.com/embed/aIrs6UkMQeY?si=yETzi6SSvkQBxRva" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h2>What it means to be a MAN - Mohamed Hoblos, Sh. Haroon Kanj Podcast</h2>
+                            <p>What does it mean to be a man? Does it mean being someone who is physically strong with a large physique? Does it mean having tremendous amounts of wealth? What role does a man play in his family with his wife and with his children?
+                            </p>
+                            <div class="duration">
+                                <img src="./assets/clock.png" alt="">
+                                <h3>38 min</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="host">
+                    h2.host
                 </div>
             </div>
         </section>
