make footer section

--- a/index.html
+++ b/index.html
@@ -211,6 +211,37 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <section id="footer">
+            <div class="footer-container">
+                <div class="footer-contant">
+                    <h2>Tech<span>Wave</span></h2>
+                    <div class="footer-icon">
+                        <div class="footer-social">
+                            <img src="./assets/spotify.png" alt="">
+                            <p>Spotify</p>
+                        </div>
+                        <div class="footer-social">
+                            <img src="./assets/apple-podcast.png" alt="">
+                            <p>Apple Podcast</p>
+                        </div>
+                        <div class="footer-social">
+                            <img src="./assets/youtube-podcast.png" alt="">
+                            <p>YouTube</p>
+                        </div>
+                        <div class="footer-social">
+                            <img src="./assets/twitter.png" alt="">
+                            <p>twitter</p>
+                        </div>
+                    </div>
+                    <p class="footer-copyright">© 2026 TechWave Podcast. All rights reserved.</p>  
+                    
+                </div>  
+                           
+            </div>           
+        </section>
+    </footer>
 </body>
 
 </html>
