make footer resposive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <!-- <nav>
+        <nav>
             <h2 class="logo-name">Tech<span>Wave</span></h2>
             <ul class="menu">
                 <li><a href="">Home</a></li>
@@ -28,9 +28,9 @@
             <div class="hamburger">
                 <img src="./assets/hamburger-menu.png" alt="">
             </div>
-        </nav> -->
+        </nav>
 
-        <section id="banner" hidden>
+        <section id="banner">
             <div class="banner-contant">
                 <div class="banner-image">
 
@@ -59,7 +59,7 @@
 
         </section>
 
-        <section id="about" hidden>
+        <section id="about">
             <div class="about-container">
                 <div class="about-contant">
                     <h2>About the Podcast</h2>
@@ -96,7 +96,7 @@
     </header>
 
     <main>
-        <section id="why" hidden>
+        <section id="why">
             <div class="why-container">
                 <div class="heading">
                     <h2>Why Choose TechWave</h2>
