remove all hidden

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <section id="feature">
             <div class="feature-container">
-                <div class="episode" hidden>
+                <div class="episode">
                     <h2 class="feature-heading">Featured Episodes</h2>
                     <div class="video-content">
                         <div class="video-1 video">
